fixed sign up with facebook line height so that it's aligned vertically

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -109,6 +109,7 @@ div.overlay-white {
 // Landing page
 
 #main-login-button {
+  line-height: 2.7;
 }
 
 #main-banner {
